Fix the fullscreen being overlapped by some of the elements in module forms.
Note: Might have minified the Yui file wrong. I just used a generic minifier.

Fixes: #15

--- a/styles.css
+++ b/styles.css
@@ -27,3 +27,7 @@
     display: none;
     visibility: hidden;
 }
+
+.CodeMirror-wrap {
+    z-index: 999;
+}
